# gauss-glmnet

./: README.md
docs/: glmnetfit.md
gauss/examples/: glmnet1.e  glmnet_max_predictors.e  pcancer.e  pcancer_validate.e  x_glmnet.csv  y_glmnet.csv
gauss/src/: glmnet.sdf  glmnet.src
src/: CMakeLists.txt  glmnet.cpp  glmnet.h  glmnet5dp.f
